# VeloxrQt

./: .gitignore  CMakeLists.txt  CMakePresets.json  Main.qml  macmetalbridge.h  macmetalbridge.mm  main.cpp  vulkanrenderitem.cpp  vulkanrenderitem.h
VulkanRenderer/: CMakeLists.txt  MetalSurfaceHelper.h  MetalSurfaceHelper.mm  OrthographicCamera.cpp  OrthographicCamera.h  TextureTiling.cpp  TextureTiling.h  Vertex.h  VulkanRenderer_global.h  device.cpp  device.h  main.cpp  renderer.h  test.h  texture.cpp  texture.h  vulkanrenderer.h
VulkanRenderer/shaders/: passthrough.frag  passthrough.vert
VulkanRenderer/spirv/: frag.spv  vert.spv
